--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ body {
 
 .header {
   width: 100%;
+  z-index: 1;
 }
 
 .headerStyle {
@@ -17,6 +18,6 @@ body {
 }
 
 .characters {
-  margin-top: 50px;
+  margin-top: 140px;
   margin-bottom: 60px;
 }
