--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,15 +150,15 @@
 /* Change navbar styling on scroll */
 .navbar.active {
   background: linear-gradient(
-    to bottom,
-    rgba(140, 122, 122, 1) 0%,
-    rgba(175, 135, 124, 1) 65%,
-    rgba(175, 135, 124, 1) 100%
-  )
-  fixed;
+      to bottom,
+      rgba(140, 122, 122, 1) 0%,
+      rgba(175, 135, 124, 1) 65%,
+      rgba(175, 135, 124, 1) 100%
+    )
+    fixed;
   background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/coc-background.jpg")
     no-repeat center center fixed;
-    background-size: cover;
+  background-size: cover;
   box-shadow: 1px 3px 10px #f28b0377;
 }
 
@@ -180,15 +180,15 @@
 @media (max-width: 991.98px) {
   .navbar {
     background: linear-gradient(
-      to bottom,
-      rgba(140, 122, 122, 1) 0%,
-      rgba(175, 135, 124, 1) 65%,
-      rgba(175, 135, 124, 1) 100%
-    )
-    fixed;
+        to bottom,
+        rgba(140, 122, 122, 1) 0%,
+        rgba(175, 135, 124, 1) 65%,
+        rgba(175, 135, 124, 1) 100%
+      )
+      fixed;
     background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/coc-background.jpg")
       no-repeat center center fixed;
-      background-size: cover;
+    background-size: cover;
     box-shadow: 1px 3px 10px #f28b0377;
   }
 
@@ -218,11 +218,20 @@
 }
 
 .footer {
+  background: linear-gradient(
+    to bottom,
+    rgba(140, 122, 122, 1) 0%,
+    rgba(175, 135, 124, 1) 65%,
+    rgba(175, 135, 124, 1) 100%
+  )
+  fixed;
+background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/coc-background.jpg")
+  no-repeat center center fixed;
+background-size: cover;
   position: fixed;
   height: 20px;
   bottom: 0;
   width: 100%;
-  background-color: rgba(131, 127, 127, 0.911);
   z-index: 99;
   font-size: 14px;
   color: white;
